mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-mysql
  labels:
    app: demo-app
spec:
  ports:
    - port: 3306
  selector:
    app: demo-app
    tier: mysql
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-mysql
  labels:
    app: demo-app
spec:
  selector:
    matchLabels:
      app: demo-app
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: demo-app
        tier: mysql
    spec:
      containers:
      - name: mysql
        image: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /mnt/data
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
