app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-spring
  labels:
    app: demo-app-spring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app-spring
  template:
    metadata:
      labels:
        app: demo-app-spring
    spec:
      containers:
      - name: demo-app-spring
        image: srilabs/springappmysql:latest
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 8080
        resources:
          limits:
            cpu: 0.2
            memory: "200Mi"
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app-spring
  labels:
    app: demo-app-spring
spec:
  type: LoadBalancer
  selector:
    app: demo-app-spring
  ports:
  - protocol: TCP
    name: http
    port: 8080
    targetPort: 8080
    nodePort: 30090

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: springbootapp.webapp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
